--- a/README
+++ b/README
@@ -3,3 +3,7 @@ TODO:
 2011-07-11:
 
 Embryo till rapport
+Abstrahera test mer
+Utskrift för formulärfel
+"Mandatory" med fel
+Testbibliotek (library i egen "modul")
