--- a/README
+++ b/README
@@ -4,6 +4,6 @@ TODO:
 
 Embryo till rapport
 Abstrahera test mer
-Utskrift för formulärfel
+Utskrift fÃ¶r formulÃ¤rfel
 "Mandatory" med fel
 Testbibliotek (library i egen "modul")
