Added comment about test library in a separate module

--- a/README
+++ b/README
@@ -3,7 +3,17 @@ TODO:
 2011-07-11:
 
 Embryo till rapport
+
 Abstrahera test mer
+
 Utskrift för formulärfel
+
 "Mandatory" med fel
-Testbibliotek (library i egen "modul")
+
+Testbibliotek (en egen Maven modul som är den enda modulen som är
+               beroende av fest-swing-junit, allt för att rimligt
+               enkelt kunna byta testramverk utan att skriva om
+               alla tester)
+
+
+
