Added stuff to do coming week

--- a/README
+++ b/README
@@ -1,5 +1,33 @@
 Att göra:
 
+2011-08-05
+
+Problembeskrivning i rapporten
+Fundera över färg och form efteråt!
+Beskriv avd Exjobbet egentligen går ut på.
+(1/2 -- 1/4 A4)
+
+TDD erfarenhet i rapporten
+(1/2 A4)
+Fördelar, nackdelar
+
+
+Delrapport måndag eftermiddag - ett område.
+Delrapport tisdag eftermiddag - det andra området.
+
+Klart Onsdag!
+
+
+
+
+Backend utan att exponera en MAPs interface
+
+GUI bakom login
+
+Glitch:
+Ignore case vid lösenordsjämförelser
+
+
 
 2011-07-29
 
