Added stuff to do coming week

--- a/README
+++ b/README
@@ -10,6 +10,7 @@ Beskriv avd Exjobbet egentligen går ut på.
 TDD erfarenhet i rapporten
 (1/2 A4)
 Fördelar, nackdelar
+Resonera om att skriva tester före och efter.
 
 
 Delrapport måndag eftermiddag - ett område.
